--- a/sample.html
+++ b/sample.html
@@ -1,6 +1,6 @@
- 凸(•̀_•́)凸❤️ ( ͡° ͜ʖ ͡°) \(°□°)/层∀ﾟ
+The rest of   凸(•̀_•́)凸❤️ ( ͡° ͜ʖ ͡°) \(°□°)/层∀   the text is here and there
 <meta charset='utf8'/>
-<svg xmlns="http://www.w3.org/2000/svg" font-family="arial" font-size="14" height="6976" width="1032">
+<svg x="100" y="200" xmlns="http://www.w3.org/2000/svg" font-family="arial" font-size="14" height="6976" width="1032">
 
 <style xmlns="http://www.w3.org/2000/svg">
 
@@ -24,23 +24,27 @@
     
 </style>
 
-<circle cx="40" cy="40" r="16"/><text text-anchor="start" x="34" y="44">
+<text text-anchor="start" x="0" y="44">
+The rest of  
+</text><text text-anchor="start" x="352" y="44">
+   the text is here and there
+</text><circle cx="144" cy="40" r="16"/><text text-anchor="middle" x="144" y="44">
 •̀_•́
-</text><text text-anchor="end" x="18" y="44">
+</text><text text-anchor="end" x="128" y="44">
  凸
-</text><text text-anchor="start" x="58" y="44">
+</text><text text-anchor="start" x="160" y="44">
 凸❤️
-</text><circle cx="124" cy="40" r="28"/><text text-anchor="start" x="106" y="44">
+</text><circle cx="228" cy="40" r="28"/><text text-anchor="middle" x="228" y="44">
  ͡° ͜ʖ ͡°
-</text><text text-anchor="end" x="90" y="44">
+</text><text text-anchor="end" x="200" y="44">
  
-</text><text text-anchor="start" x="154" y="44">
+</text><text text-anchor="start" x="256" y="44">
 
-</text><circle cx="192" cy="40" r="16"/><text text-anchor="start" x="186" y="44">
+</text><circle cx="296" cy="40" r="16"/><text text-anchor="middle" x="296" y="44">
 °□°
-</text><text text-anchor="end" x="170" y="44">
+</text><text text-anchor="end" x="280" y="44">
  \
-</text><text text-anchor="start" x="210" y="44">
+</text><text text-anchor="start" x="312" y="44">
 /层∀
 </text>
 </svg>
