Add api to extract the nodes and the rest of text

--- a/donger.html
+++ b/donger.html
@@ -31,7 +31,18 @@ blockquote {
     <div>
     <pre>
         <code class="nohighlight">
-
+  ______________________________________________
+          &lt; /home/shani/Applications/terraform/terraform &gt;
+           ----------------------------------------------
+           /
+     /,   /
+    / \
+___/___\_\V/
+  &amp;(O_~)% Y
+   /___\__|
+  /) : (  |
+  /     \ |   ldb
+ '--v-v--'|
 
 The original Lenny Face ( ͡° ͜ʖ ͡°) 
 
